# WebScrap

./: CMakeLists.txt  Makefile  README.md
inc/: com.hpp  convert.hpp  nav.hpp  useless.hpp
include/: com.h
src/: com.cpp  convert.cpp  main.cpp  nav.cpp  useless.cpp
